--- a/css/shop.css
+++ b/css/shop.css
@@ -1,3 +1,21 @@
+#filters {
+  display: flex;
+  justify-content: center;
+  gap: 4rem;
+  padding-bottom: 0;
+}
+
+#filters div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+#filters div label {
+  font-size: 1.6rem;
+}
+
 #pagination {
   text-align: center;
 }
