Support for multiple categories

--- a/css/shop.css
+++ b/css/shop.css
@@ -18,9 +18,13 @@
 
 #pagination {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
-#pagination a {
+#pagination button {
   text-decoration: none;
   background-color: var(--color-green-shade-1);
   padding: 1.5rem 2rem;
